# jacket-1

./: .gitreview  README.md  requirements.txt  setup.cfg  setup.py  setup.sh
cinder/volume/drivers/ec2/: driver.py
doc/: README.rst
jacket/cinder/volume/drivers/ec2/: adapter.py  driver.py  exception_ex.py  wormhole_business.py
jacket/cinder/volume/drivers/fs/: __init__.py  driver.py  exception_ex.py  fs_service.py
jacket/cinder/volume/drivers/jacket/: __init__.py
jacket/cinder/volume/drivers/vcloud/: driver.py  vcloudair.py
jacket/jacketstatuscache/: awssynchronizer.py  jacketcache.py  power_state.py  vcloudsynchronizer.py
jacket/nova/virt/aws/: __init__.py  driver.py  exception_ex.py  hypernode_api.py  image_utils.py
jacket/nova/virt/aws/statuscache/: awssynchronizer.py  jacketcache.py  vcloudsynchronizer.py
jacket/nova/virt/fs/: __init__.py  driver.py  exception_ex.py  fs_service.py  nova-compute.json  tset.py
jacket/nova/virt/hybrid/: __init__.py
jacket/nova/virt/hybrid/common/: fake_driver.py
jacket/nova/virt/hybrid/vcloud/: driver.py  vcloud.py  vcloud_client.py
jacket/nova/virt/jacket/: __init__.py
jacket/nova/virt/jacket/aws/: driver.py  (+2 more)
jacket/nova/virt/vcloudapi/: __init__.py  driver.py  network_utils.py  vcenter_utils.py  vcloud_network_utils.py  vcloudair.py
jacket/nova/virt/vmwareapi/: __init__.py
jacket/nova/virt/vtep/: aws_driver.py  driver.py  network_api.py  vcloud_driver.py
jacket/scripts/: jacket.py
nova/virt/aws/: driver.py
nova/virt/hybrid/vcloud/: exceptions.py  util.py  vcloud.py
nova/virt/vcloudapi/: driver.py
(+22 files in other folders)
